--- a/restaurant website/style.css
+++ b/restaurant website/style.css
@@ -51,12 +51,13 @@ body {
   color: #000;
   opacity: 0.9;
   z-index: 10;
+  top: 0px;
 }
 
 .navbar-container {
   display: flex;
   justify-content: space-between;
-  height: 64px;
+  height: 60px;
   align-items: center;
 }
 .menu-items {
@@ -84,7 +85,7 @@ ul a {
 
 .showcase-area {
   height: 60vh;
-  background: url("./images/food1.jpg");
+  background: url("./images/food.jpg");
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
@@ -109,7 +110,6 @@ ul a {
 
 .about-wrapper {
   display: flex;
-  
 }
 
 #about h2 {
@@ -145,9 +145,9 @@ ul a {
   animation: about-text-animation 1s ease-in-out forwards;
 }
 @keyframes about-text-animation {
-    100%{
-        transform: translate(0%);
-    }
+  100% {
+    transform: translate(0%);
+  }
 }
 .about-img img {
   display: block;
@@ -156,4 +156,80 @@ ul a {
   margin: auto;
   object-fit: cover;
   object-position: right;
+}
+
+#food {
+  padding: 5rem 0 10rem 0;
+}
+#food h2 {
+  text-align: center;
+  font-size: 3rem;
+  font-weight: 500;
+  margin-bottom: 40px;
+  text-transform: uppercase;
+  color: #555;
+}
+
+.food-container {
+  display: flex;
+  justify-content: space-between;
+}
+
+.food-container img {
+  display: block;
+  width: 100%;
+  margin: auto;
+  max-height: 300px;
+  object-fit: cover;
+  object-position: center;
+}
+
+.img-container {
+  margin: 0 1rem;
+  position: relative;
+}
+
+.img-content {
+  position: absolute;
+  top: 70%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  z-index: 2;
+  opacity: 0;
+  text-align: center;
+  transition: all 0.3s ease-in-out 0.1s;
+}
+
+.img-content h3{
+  color:#fff;
+  font-size:3rem;
+
+}
+
+.img-content a{
+  font-size: 1.2rme;
+}
+.img-container::after{
+  content: "";
+  display: block;
+  position: absolute;
+  top:0;
+  left:0;
+  width:100%;
+  height:100%;
+  background-color: rgba(0, 0, 0,0.85);
+  /* opacity:0; */
+  z-index: 1;
+  transform: scaleY(0);
+  transform-origin :100% 100% ;
+  transition: all 0.3s ease-in-out;
+}
+.img-container:hover::after{
+  opacity: 1;
+  transform: scaleY(1);
+}
+
+.img-container:hover .img-content{
+  opacity: 1;
+  top: 40%;
 }
